2005-01-22  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in (drop_dhcp_connection): function to drop dhclient
	proccess when disabling an interface. (enable_iface_with_config): use
	this. Definitely fixes bug #157343

2005-01-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: use [0-9*#]+ as regexp for getting the dial prefix
	in all distros

2005-01-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* time-conf.in: added openntpd as NTP daemon for gentoo, replace
	ntp-simple and npt-refclock with ntp-server in debian. Closes #153491
	and #154377 (This one with patch from Vincent Vuntz)

2005-01-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: remove "dialing" tags, not needed, no UI for this,
	and wvdialconf could block under certain circumstances. Closes #123216

2005-01-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in (gst_network_enable_isdn): added, handles ISDN
	connections. (gst_network_enable_iface_with_config): use it

2005-01-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* shares-conf.in: fixed paths extraction from XML, added some extra
	info to the XML to know which sharing servers exist/are active

2005-01-20  Carlos Garcia Campos  <carlosgc@gnome.org>

	* disks-conf.in: fixed an important bug in the scsi bus scanning

2005-01-17  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: Doh!, fixed bootproto creation in debian

2005-01-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.4.1

2005-01-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* users-conf.in: unfuck groups stuff in profiles, more concretely
	make it safe the new info sucessfully

2005-01-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.4

2005-01-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* users-conf.in: added default groups to profiles

2005-01-11  Carlos Garnacho Parro  <carlosg@gnome.org>

	* shares-conf.in: made it to save general SMB config
