@@ -1,3 +1,9 @@
+2005-01-24  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* network.pl.in: unbreak list_ifaces directive
+	* shares-conf.in: unbreak interfaces detection for nfs acl addition
+	dialog
+
 2005-01-22  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* network.pl.in (drop_dhcp_connection): function to drop dhclient
